# alibabacloud-maxcompute-mcp-server

./: .gitignore  LICENSE  README.md  README_ZH.md  config.example.json  pyproject.toml
.github/ISSUE_TEMPLATE/: local-mcp-server-issue.md  remote-mcp-service-feedback.md
.github/workflows/: ci.yml
maxcompute_catalog_mcp/: __init__.py  client_factory.py  config.py  credentials.py  maxcompute_client.py  mcp_protocol.py  server.py  tools.py  tools_catalog.py  tools_common.py  tools_compute.py  tools_designer.py  tools_security.py  tools_session.py  tools_table_meta.py
tests/: __init__.py  conftest.py  test_catalog_extra.py  test_client_factory.py  test_config.py  test_coverage_boost.py  test_credentials.py  test_designer_extra.py  test_e2e_catalog_browse.py  test_e2e_compute_coverage.py  test_e2e_designer_validation.py  test_e2e_error_handling.py  test_e2e_pagination.py  test_e2e_search.py  test_e2e_security.py  test_e2e_security_coverage.py  test_e2e_security_crossproject_types.py  test_e2e_session.py  test_e2e_sql_advanced.py  test_e2e_sql_output_uri.py  test_e2e_sql_workflow.py  test_e2e_table_meta.py  test_integration.py  test_integration_sql_guard.py  test_integration_table_types.py  test_maxcompute_client.py  test_protocol.py  test_security.py  test_server.py  test_session.py  test_sts_refresh.py  test_tools.py  test_tools_common.py
